@@ -1,7 +1,7 @@
 
-R version 3.1.2 (2014-10-31) -- "Pumpkin Helmet"
-Copyright (C) 2014 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+R version 4.4.1 (2024-06-14) -- "Race for Your Life"
+Copyright (C) 2024 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -24,14 +24,14 @@ Type 'q()' to quit R.
 > 
 > ## double precision floating point, uncompressed
 > tempmatfile <- tempfile(pattern="npymat", fileext=".npy")
-> npySave(tempmatfile, M1)
+> invisible(npySave(tempmatfile, M1))
 > M2 <- npyLoad(tempmatfile)
 > identical(M1, M2)
 [1] TRUE
 > 
 > ## double precision floating point, compressed
 > tempmatfile <- tempfile(pattern="npymat", fileext=".npy.gz")
-> npySave(tempmatfile, M1)
+> invisible(npySave(tempmatfile, M1))
 > M3 <- npyLoad(tempmatfile)
 > identical(M1, M3)
 [1] TRUE
@@ -39,7 +39,7 @@ Type 'q()' to quit R.
 > ## double precision floating point vector
 > dim(M1) <- NULL
 > tempmatfile <- tempfile(pattern="npyvec", fileext=".npy")
-> npySave(tempmatfile, M1)
+> invisible(npySave(tempmatfile, M1))
 Saving Numeric Vector
 > M2 <- npyLoad(tempmatfile)
 > identical(M1, M2)
@@ -47,7 +47,7 @@ Saving Numeric Vector
 > 
 > ## double precision floating point vector, compressed
 > tempmatfile <- tempfile(pattern="npyvec", fileext=".npy.gz")
-> npySave(tempmatfile, M1)
+> invisible(npySave(tempmatfile, M1))
 Saving Numeric Vector
 > M3 <- npyLoad(tempmatfile)
 > identical(M1, M3)
@@ -56,14 +56,14 @@ Saving Numeric Vector
 > ## integer, uncompressed
 > M4 <- matrix(as.integer(round(M1)), 1e3, 1e3)
 > tempmatfile <- tempfile(pattern="intnpymat", fileext=".npy")
-> npySave(tempmatfile, M4)
+> invisible(npySave(tempmatfile, M4))
 > M5 <- npyLoad(tempmatfile, "integer")
 > identical(M4, M5)
 [1] TRUE
 > 
 > ## integer, compressed
 > tempmatfile <- tempfile(pattern="intnpymat", fileext=".npy.gz")
-> npySave(tempmatfile, M4)
+> invisible(npySave(tempmatfile, M4))
 > M6 <- npyLoad(tempmatfile, "integer")
 > identical(M4, M6)
 [1] TRUE
@@ -71,18 +71,18 @@ Saving Numeric Vector
 > ## integer vector, uncompressed
 > dim(M4) <- NULL
 > tempmatfile <- tempfile(pattern="intnpyvec", fileext=".npy")
-> npySave(tempmatfile, M4)
+> invisible(npySave(tempmatfile, M4))
 > M5 <- npyLoad(tempmatfile, "integer")
 > identical(M4, M5)
 [1] TRUE
 > 
 > ## integer vector, compressed
 > tempmatfile <- tempfile(pattern="intnpyvec", fileext=".npy.gz")
-> npySave(tempmatfile, M4)
+> invisible(npySave(tempmatfile, M4))
 > M6 <- npyLoad(tempmatfile, "integer")
 > identical(M4, M6)
 [1] TRUE
 > 
 > proc.time()
    user  system elapsed 
-  2.509   0.144   2.640 
+  1.544   0.506   1.390 
